@@ -9,9 +9,6 @@ noinst_LTLIBRARIES += libbase_debug.la
 endif
 
 libbase_la_SOURCES = $(h_base_sources) $(cpp_base_sources)
-if BUILD_ZDOTUSUB
-libbase_la_SOURCES += $(f_base_sources)
-endif
 libbase_la_CXXFLAGS = $(CXXFLAGS_OPT)
 libbase_la_LIBADD = \
 	$(top_builddir)/@PACKAGE@/base/algebra/libalgebra.la \
@@ -19,9 +16,6 @@ libbase_la_LIBADD = \
 	$(top_builddir)/@PACKAGE@/base/math/libmath.la
 
 libbase_debug_la_SOURCES = $(h_base_sources) $(cpp_base_sources)
-if BUILD_ZDOTUSUB
-libbase_debug_la_SOURCES += $(f_base_sources)
-endif
 libbase_debug_la_CXXFLAGS = $(CXXFLAGS_DEBUG)
 libbase_debug_la_LIBADD = \
 	$(top_builddir)/@PACKAGE@/base/algebra/libalgebra_debug.la \
